--- a/test-ajax-302/client/views/index.pug
+++ b/test-ajax-302/client/views/index.pug
@@ -3,4 +3,5 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+  script(src="/javascripts/jquery.min.js")
   script(src="/javascripts/a.js")
